2006-02-26  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Don't cache the metadata, it breaks too much.

2006-02-22  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am:
	* data/sound-juicer-24.png:
	Add 24x24 icon.

2006-02-22  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.svg:
	Updated artwork.

2006-02-22  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Require libgnomeui 2.13 (#332134)

2006-02-15  Ross Burton  <ross@burtonini.com>

	* data/orange-slice.png:
	* data/sound-juicer.png:
	Remove.

	* data/sound-juicer-16.png:
	* data/sound-juicer-22.png:
	* data/sound-juicer.svg:
	* data/Makefile.am:
	New artwork by Lapo Calamandrei <l.calamandrei@neri.it>.

	* data/sound-juicer.desktop.in:
	* src/sj-about.c:
	Update for new artwork.

2006-02-15  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Unmark some strings as translatable.

2006-02-15  Ross Burton  <ross@burtonini.com>

	* src/sound-juicer.h:
	* src/sj-extractor.c:
	* src/sj-play.c:
	Pull out the cd source name as define.

2006-02-15  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-prefs.c:
	Re-arrange the Preferences dialog, add ellipsis as required,
	change a few strings and add mnemonics to the main window.  Yay UI
	Review!

2006-02-15  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c (update_speed_progress):
	Use the unicode multiply symbol rather than an x.

2006-02-12  Ross Burton  <ross@burtonini.com>

	* Makefile.am:
	Add magic to do a release.

2006-02-12  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.13.5.

2006-02-07  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Fix build when Musicbrainz tags are present.

2006-02-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sj-extractor.c:
	I was a muppet and didn't have the right packages installed.  Far
	better solution to MusicBrainz tagging.

2006-02-07  Ross Burton  <ross@burtonini.com>

	* configure.in: