@@ -1,5 +1,10 @@
 2006-02-26  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c:
+	Fix indentation.
+
+2006-02-26  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-metadata-musicbrainz.c:
 	Don't cache the metadata, it breaks too much.
 
